# OReilly-2025-12December-objects

./: OReilly - 2025-12December-10.html  OReilly - 2025-12December-10.ipynb  OReilly - 2025-12December-11.html  OReilly - 2025-12December-11.ipynb  main.py  pyproject.toml
