[project]
name = "oreilly-2025-12december-objects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitautopush>=0.4.1",
    "jupyter>=1.1.1",
    "jupyter-core>=5.9.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]
